# agent-primitives

./: .gitignore  CLAUDE.md  Makefile  README.md  baml-session.md  baml2instructor.md  config.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini
baml_src/: agent.baml  clients.baml  generators.baml  tool_calculator.baml
evals/: clarification_tasks.yaml  complex_tasks.yaml  multistep_tasks.yaml  simple_tasks.yaml
prompts/anthropic/: examples.txt  system.txt  user.txt
prompts/ollama/: examples.txt  user.txt
prompts/openai/: examples.txt  system.txt  user.txt
src/agent_primitives/: agent.py  events.py  llmio.py  model.py  tools.py
src/ap/: actions.py  agent.py  cli.py  config.py  context.py  either.py  eval.py  examples.txt  inmemory.py  thread.py
src/ap/drivers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py
src/api/: main.py
src/cli/: main.py  test.py
src/ftype/: __init__.py  either.py
src/state/: __init__.py  inmemory.py  protocol.py
tests/: test_actions.py  test_config.py  test_either.py  test_llmio.py
